small fixes. table styles additions. debug styles. text modifications

--- a/sass/_basic-and-layout.scss
+++ b/sass/_basic-and-layout.scss
@@ -193,32 +193,37 @@ img {
 
 }
 
-/* selection fixes */
-
-::-moz-selection {
-  text-shadow: none;
+object,
+embed,
+video{
+  max-width:100%;
+  height:auto;
 }
 
-::-webkit-selection {
-  text-shadow: none;
-}
+// selection fixes
 
-::selection {
-  text-shadow: none;
-}
+//::-moz-selection {
+//  text-shadow: none;
+//}
 
-body {
-  -webkit-tap-highlight-color: rgb(255,255,158);
-}
+//::selection {
+//  text-shadow: none;
+//}
 
-*:target {
-  border-bottom: 3px solid rgba(0, 0, 0, .1);
-  -webkit-animation: focused 2s;
-}
+//body {
+//  -webkit-tap-highlight-color: rgb(255,255,158);
+//}
+
+//*:target {
+//  border-bottom: 3px solid rgba(0, 0, 0, .1);
+//}
 
 /* ============================================================================
     1.2. Lists and tables
 ============================================================================= */
+
+/* Lists
+   --------------------------------------------------------------------------*/
 
 ul, ol, dl {
   margin: 0 1.5em 1.5em 0;
@@ -248,6 +253,9 @@ dl dd {
   margin-left: 1.5em;
 }
 
+/* Tables
+   --------------------------------------------------------------------------*/
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -255,46 +263,60 @@ table {
   width: 100%;
   table-layout: fixed;
   word-wrap: break-word;
-  empty-cells:show
+  empty-cells: hide;
 }
 
 caption {
   font-size: 1.429em;
   padding-bottom: .429em;
-  border-bottom: 1px solid #ccc;
 }
 
 th, tr, td {
   vertical-align: middle;
   padding: 0 .429em;
+  border: 1px solid #ccc;
 }
 
 thead {
   td, th {
     font-weight: bold;
-    border-bottom: 1px solid #ccc;
-    border-right: 1px solid #ccc;
   }
-
-  td:last-child,
-  th:last-child {
-    border-right: none;
-  }
-
 }
 
 tbody {
-  border-top: 1px solid #ccc;
 
   td {
-    border-bottom: 1px solid #ccc;
+    
+    &[colspan] {
+      text-align:center;
+    }
+    
+    &[rowspan] {
+      vertical-align:middle;
+    }
+  
+    &[colspan="1"] {
+      text-align: left;
+    }
+    
+    &[rowspan="1"] {
+      vertical-align: top;
+    }
+    
+    &:empty {
+      border: none;
+    }
+  }
+  
+  tr:nth-of-type(odd) td {
+    background-color: rgba(0,0,0,0.05);
   }
 }
 
 tfoot {
   text-align: center;
   font-style: italic;
-  border-top: 1px solid #ccc;
+  font-size: .9em;
 }
 
 /* ============================================================================
@@ -352,36 +374,37 @@ input {
 }
 
 
-  // themed form
-  input[type="text"],
-  input[type="password"],
-  input[type="search"],
-  select, textarea {
-    border: 1px solid;
-    border-color: #777 #ccc #ccc;
-    background: #fff;
+// themed form
 
-    &:hover {
-      border-color:#777;
-    }
+input[type="text"],
+input[type="password"],
+input[type="search"],
+select, textarea {
+  border: 1px solid;
+  border-color: #777 #ccc #ccc;
+  background: #fff;
 
-    &:focus {
-      border-color: $ln-color;
-      outline: none;
-    }
+  &:hover {
+    border-color:#777;
   }
 
-  input[type="button"],
-  input[type="submit"],
-  input[type="image"], button {
-    color: #efefef;
-    background: #2d2d2d;
-    border: 1px solid #2d2d2d;
-
-    &:hover, &:focus {
-      border-color: $ln-color;
-    }
+  &:focus {
+    border-color: $ln-color;
+    outline: none;
   }
+}
+
+input[type="button"],
+input[type="submit"],
+input[type="image"], button {
+  color: #efefef;
+  background: #2d2d2d;
+  border: 1px solid #2d2d2d;
+
+  &:hover, &:focus {
+    border-color: $ln-color;
+  }
+}
 
 button {
 
@@ -411,7 +434,7 @@ optgroup {
 fieldset {
   border: 1px solid #ccc;
   margin: 0 0 1.4375em;
-  padding: 1.5em;
+  padding: 1em 1.5em 1.5em;
 }
 
 legend {
@@ -434,21 +457,19 @@ legend {
 
 }
 
-/* placeholder styles */
+// placeholder styles
 
-input::-webkit-input-placeholder {
-}
+//input::-webkit-input-placeholder {
+//}
 
-input:-moz-placeholder {
-}
+//input:-moz-placeholder {
+//}
 
-/* Colors for native form validition */
+// Colors for native form validition 
 
-input:valid, textarea:valid {
-}
+//input:valid, textarea:valid {}
 
-input:invalid, textarea:invalid {
-}
+//input:invalid, textarea:invalid {}
 
 /* ============================================================================
     1.4. Specific
@@ -457,6 +478,7 @@ input:invalid, textarea:invalid {
 sup, sub {
   position: relative;
   font-size: .8em;
+  font-weight: inherit;
 }
 
 sup {
@@ -494,6 +516,10 @@ figure {
 /* ============================================================================
     1.5. Page Layout
 ============================================================================= */
+
+html {
+  line-height: 1.3em;
+}
 
 body {
   font: normal normal 87.5%/1.3em #{$sans};
@@ -606,7 +632,7 @@ $footer-height: 50px;
     }
 
     #main-inner {
-        padding-bottom: $footer-height * 2;
+        padding-bottom: $footer-height;
     }
 
     #footer {
@@ -674,4 +700,15 @@ span.flush {
   &:hover, &:focus {
     color: $ln-h-color;
   }
+}
+
+.opacity {
+  opacity: .85;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity = 85)";
+  filter: alpha(opacity = 85);
+}
+
+.dib-ie {
+  *display: inline;
+  *zoom: 1;
 }
