--- a/sass/_basic-and-layout.scss
+++ b/sass/_basic-and-layout.scss
@@ -1,7 +1,7 @@
 //  __  __  __    _
 //  \ \/  \/ /__ (_) __  __                /\
 //   \  /\  / -_)| |(__ (__            /\ /  \/\
-//    \/  \/\___||_| __) __) css helper  /\/\/\ \
+//    \/  \/\___||_| __) __) css framework /\/\ \
 //         https://github.com/dimanech/weiss   \ \
 //
 // ============================================================================
